# OpenGLRenderer1

./: CMakeCache.txt  CMakeLists.txt  Makefile  OpenglTest.cbp  README.md  cmake_install.cmake  imgui.ini  main.cpp  obj_parser.cpp  openglStuff.h
Dependencies/stb_image/: stb_image.h
OpenGLClasses/: Camera.cpp  Camera.h  ColoredModel.cpp  ColoredModel.h  Commons.h  Entity.cpp  Entity.h  LightSource.cpp  LightSource.h  RawModel.cpp  RawModel.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TexturedModel.cpp  TexturedModel.h  Vertex.cpp  Vertex.h
assets/: ColoredShader.txt  TexturedShader.txt
